gpio_macros/tests/gpio_pin_partially_erased_bad_pin.stderr
Inherited
error: An identifier with the ^P[A-H]x$ pattern was expected but "PBBx" was supplied
 --> $DIR/gpio_pin_partially_erased_bad_pin.rs:3:1
  |
3 | gpio_partially_erased!(PBBx);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
