gpio_macros/tests/gpio_pin_partially_erased_bad_pin.rs
use gpio_macros::gpio_partially_erased;

gpio_partially_erased!(PBBx);

fn main() {}